# api_new

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmark/: performance_test.py  utils.py
src/api/: config.py  main.py  models.py  postprocess.py  preprocess.py  visualize_results.py
src/engine/: engine.py  models.py  scheduler.py  utils.py
tests/: 1_basic_test.py  2_api_test.py  utils.py
tests/engine_tests/: 1_simplest_test.py  2_atomic_test.py
tests/engine_tests/test_data/: no_activity.json  pre_assignments.json  simplest.json  spread_workers_2activities_1assignment.json  spread_workers_2activities_4assignments.json
tests/test_data/: activity_with_multiple_skill_levels.json  availibility_one_activity.json  availibility_two_activities.json  one_activity_easy.json  one_activity_levels.json  one_shift_per_day_medium.json  one_shift_per_day_medium_plus.json  shortage_when_insufficient_workers.json  six_overlapping_activities.json  trainings_availibility_easy.json
