[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "ortools>=9.12.4544",
    "pandas>=2.2.3",
    "rich>=14.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/engine", "src/api"]

[tool.ruff]
line-length = 150

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

